plugins {
    id("maven-publish")
    id("com.vanniktech.maven.publish") version "0.35.0"
}
apply plugin: 'com.android.library'
apply plugin: 'org.jetbrains.kotlin.android'


android {
    compileSdk 36
    namespace 'com.hjq.permissions'
    kotlinOptions {
        jvmTarget = '1.8'
    }

    // 支持 Java JDK 8
    compileOptions {
        targetCompatibility JavaVersion.VERSION_1_8
        sourceCompatibility JavaVersion.VERSION_1_8
    }

    defaultConfig {
        // Minimum supported Android version
        minSdkVersion 19
        targetSdk 36
        versionCode 2650
        versionName "26.5"
        // Consumer ProGuard/R8 rules for this library
        consumerProguardFiles 'proguard-permissions.pro'
    }

    libraryVariants.configureEach { variant ->
        variant.packageLibraryProvider.configure { packageLib ->
            // Exclude the META-INF directory from the AAR
            packageLib.exclude 'META-INF/'
            // Exclude the generated R.txt file
            packageLib.exclude 'R.txt'
        }
    }
}

dependencies {
    implementation 'androidx.core:core-ktx:1.10.1'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.github.getActivity:DeviceCompat:2.6'
}
